# tablemaster

./: .gitignore  README.md  pyproject.toml  setup.py  tablemaster-schema-开发计划.md  test_pandas_where.py
example/: cfg.yaml
example/schema/mydb/ods/: ods_orders.yaml
tablemaster/: __init__.py  cli.py  config.py  database.py  feishu.py  gspread.py  local.py  mysql.py  serialization.py  sync.py  utils.py
tablemaster.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tablemaster/schema/: __init__.py  apply.py  diff.py  init.py  introspect.py  loader.py  models.py  plan.py  pull.py
tablemaster/schema/dialects/: __init__.py  base.py  mysql.py  postgresql.py  tidb.py
tests/: test_config_and_database.py  test_error_visibility.py  test_postgresql_upsert.py  test_schema_core.py  test_serialization_and_local.py  test_sync.py
